# continuum

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PHASE2_QA_SUMMARY.md  README.md  README_PHASE2_QA.md  RESEARCH_OPPORTUNITIES_SUMMARY.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
apps/api/agents/: interview.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/db/: neo4j.py  postgres.py  redis.py
apps/api/middleware/: logging.py  metrics.py  request_size.py
apps/api/models/: __init__.py  ontology.py  postgres.py  provenance.py  schemas.py
apps/api/routers/: auth.py  capture.py  dashboard.py  decisions.py  entities.py  export.py  graph.py  ingest.py  projects.py  search.py  users.py
apps/api/services/: batch_processor.py  decision_analyzer.py  embeddings.py  entity_cache.py  entity_resolver.py  extractor.py  llm.py  message_queue.py  parser.py  transaction_coordinator.py  validator.py
apps/api/tests/: conftest.py  factories.py  test_auth.py  test_e2e.py  test_embedding_cache.py  test_entity_cache.py  test_interview_state.py  test_json_extraction.py  test_llm.py  test_message_queue.py  test_prompt_sanitizer.py  test_retry_logic.py
apps/api/tests/contract/: schemas.py  test_dashboard_contract.py  test_decisions_contract.py  test_graph_contract.py
apps/api/tests/e2e/: test_workflows.py
apps/api/tests/integration/: test_data_integrity.py  (+2 more)
apps/api/utils/: __init__.py  cache.py  circuit_breaker.py  json_extraction.py  logging.py  metrics.py  prompt_sanitizer.py  retry.py  sanitize.py
(+67 files in other folders)
